[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://src/SceneCameras.gd" type="Script" id=2]
[ext_resource path="res://src/Temperature.gd" type="Script" id=3]
[ext_resource path="res://src/BowlFishLight.gd" type="Script" id=4]
[ext_resource path="res://scenes/Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Spawner.gd" type="Script" id=6]
[ext_resource path="res://scenes/Fishbowl.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Room.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Moon.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Fish.gd" type="Script" id=10]
[ext_resource path="res://scenes/Fish.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Eel.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Eel.gd" type="Script" id=13]
[ext_resource path="res://scenes/Snail.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Snail.gd" type="Script" id=15]
[ext_resource path="res://scenes/Rock01.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/Rock02.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/Rock06.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/Rock03.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/Seaweed.tscn" type="PackedScene" id=20]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="SceneCameras" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="SceneCameras"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.212, 100, 0.077 )
far = 193.3

[node name="RichTextLabel" type="RichTextLabel" parent="SceneCameras/Camera"]
margin_left = 886.867
margin_top = 20.0422
margin_right = 926.867
margin_bottom = 60.0422
rect_scale = Vector2( 2.68, 1.32 )

[node name="Camera2" type="Camera" parent="SceneCameras"]
transform = Transform( -0.999999, -0.00144494, 0.000518686, -0.000423806, 0.584553, 0.811356, -0.00147556, 0.811354, -0.584553, 1.099, 28.7987, -37.1545 )

[node name="RichTextLabel" type="RichTextLabel" parent="SceneCameras/Camera2"]
margin_left = 886.867
margin_top = 20.0422
margin_right = 926.867
margin_bottom = 60.0422
rect_scale = Vector2( 2.68, 1.32 )

[node name="Temperatura" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 3 )

[node name="BowlFishLight" type="DirectionalLight" parent="Temperatura"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -3.82731, 53.8821, 12.2964 )
light_energy = 10.0
light_indirect_energy = 2.62
script = ExtResource( 4 )

[node name="FoodSpawner" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40.093, 0 )
script = ExtResource( 6 )
objStr = "Food"

[node name="Fishbowl" parent="." instance=ExtResource( 7 )]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )

[node name="Room" parent="." instance=ExtResource( 8 )]
transform = Transform( 15, 0, 0, 0, 15, 0, 0, 0, 15, 0, -35.1343, 0 )

[node name="BubbleSpawner" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -34.5027, 0 )
script = ExtResource( 6 )
objStr = "Bubble"

[node name="MoonFish" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.75805, 13.924, 0 )
script = ExtResource( 10 )
speed = 0.05
automatic = true

[node name="Fish" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.568, -3.60998, 0 )
script = ExtResource( 10 )
speed = 0.02
automatic = true

[node name="Eel" parent="." instance=ExtResource( 12 )]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -15.8936, 0 )
script = ExtResource( 13 )
speed = 0.03
automatic = true

[node name="Snail" parent="." instance=ExtResource( 14 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -32, -15.071 )
script = ExtResource( 15 )
speed = 0.001
automatic = true

[node name="Rocks" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1.88714, 0, 1.55346, 0, 1, 0, -1.55346, 0, 1.88714, 0.0661106, -33.1741, 27.2972 )

[node name="Rock01" parent="Rocks" instance=ExtResource( 16 )]
transform = Transform( 0.409116, 0, 0, 0, 1, 0, 0, 0, 0.409116, 1.28192, 0.136856, -5.00689 )

[node name="Rock06" parent="Rocks" instance=ExtResource( 16 )]
transform = Transform( 0.409116, 0, 0, 0, 1, 0, 0, 0, 0.409116, 3.48019, 0.136856, -9.8817 )

[node name="Rock07" parent="Rocks" instance=ExtResource( 16 )]
transform = Transform( 0.409116, 0, 0, 0, 1, 0, 0, 0, 0.409116, 0.0661411, 0.136856, -16.3882 )

[node name="Rock02" parent="Rocks" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 13.5664, -0.554302, -5.6691 )

[node name="Rock05" parent="Rocks" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 6.60748, -0.554302, 1.61604 )

[node name="Rock04" parent="Rocks" instance=ExtResource( 18 )]
transform = Transform( 0.945428, 0, 2.98023e-08, 0, 2.10701, 0, -2.98023e-08, 0, 0.945428, -3.96528, -2.91941, -5.69317 )

[node name="Rock03" parent="Rocks" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 7.16075, 0, -17.2226 )

[node name="Rock08" parent="Rocks" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, 0, 0, 0 )

[node name="Seaweeds" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.60537, 14.6908, 31.7199 )

[node name="SeaweedSpatial2" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.605, -44, -31.72 )

[node name="SeaweedSpatial3" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.10756, -44, -28.0734 )

[node name="SeaweedSpatial4" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.10756, -44, -32.1374 )

[node name="SeaweedSpatial5" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.6957, -44, -22.0444 )

[node name="SeaweedSpatial6" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.6957, -44, -17.9655 )

[node name="SeaweedSpatial7" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.0347, -44, -26.2501 )

[node name="SeaweedSpatial8" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.91296, -44, -50.6356 )

[node name="SeaweedSpatial9" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02236, -44, -51.3062 )

[node name="SeaweedSpatial10" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03762, -44, -48.3372 )

[node name="SeaweedSpatial11" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.0978, -44, -28.5258 )

[node name="SeaweedSpatial12" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 0.850185, 0, 0.526484, 0, 1, 0, -0.526484, 0, 0.850185, -19.5073, -44, -25.441 )

[node name="SeaweedSpatial13" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 0.772061, 0, 0.635548, 0, 1, 0, -0.635548, 0, 0.772061, -0.317473, -44.1329, -8.558 )

[node name="SeaweedSpatial14" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 0.772061, 0, 0.635548, 0, 1, 0, -0.635548, 0, 0.772061, -8.53711, -44.1329, -11.7765 )

[node name="SeaweedSpatial15" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 0.772061, 0, 0.635548, 0, 1, 0, -0.635548, 0, 0.772061, -2.14222, -44.1329, -13.4507 )

[node name="SeaweedSpatial16" parent="Seaweeds" instance=ExtResource( 20 )]
transform = Transform( 0.772061, 0, 0.635548, 0, 1, 0, -0.635548, 0, 0.772061, -19.5268, -44.1329, -32.6487 )
